Fix spacing
Push bio lower

--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 .tena {
-  line-height: 0.8;
+  line-height: 0.85;
 }
 
 .email-link {
